Correcting spacing in blogs, adding correct class name in blogs back button

--- a/app/(sections)/blog/[slug]/styles.module.scss
+++ b/app/(sections)/blog/[slug]/styles.module.scss
@@ -2,9 +2,14 @@
 
 .blogSlugSection {
   @include pageWidthMixin;
+  justify-content: flex-start;
+  width: 100%;
 
   .blogContainer {
     @include flexCol;
+    flex: auto;
+    justify-content: center;
+    width: 100%;
     gap: 20px;
 
     .blogContent {
