--- a/app/styles.module.scss
+++ b/app/styles.module.scss
@@ -10,6 +10,7 @@
 
   .mainContainer {
     display: flex;
+    width: 100%;
     flex: auto;
     flex-direction: column;
     justify-content: center;
